[workspace]
members = ["upgrayedd-macros", "upgrayedd"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["William Woodruff <william@yossarian.net>"]
license = "MIT"
repository = "https://github.com/woodruffw/upgrayedd"
description = "Ergonomic function interposition in Rust"
readme = "README.md"

[workspace.metadata.release]
tag = false                # handled by upgrayedd/Cargo.toml
publish = false            # handled by GitHub Actions
push = true
shared-version = true
consolidate-commits = true
