[package]
name = "upgrayedd-macros"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }
